[build-system]
requires = ["setuptools>=61.2", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "workflows"
version = "3.0"
description = "Data processing in distributed environments"
readme = "README.rst"
authors = [
    { name = "Diamond Light Source", email = "scientificsoftware@diamond.ac.uk" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = { text = "BSD-3-Clause" }
requires-python = ">=3.10"
dependencies = ["bidict", "pika", "setuptools", "stomp-py>=7"]

[project.urls]
Download = "https://github.com/DiamondLightSource/python-workflows/releases"
Documentation = "https://github.com/DiamondLightSource/python-workflows"
GitHub = "https://github.com/DiamondLightSource/python-workflows"
Bug-Tracker = "https://github.com/DiamondLightSource/python-workflows/issues"

[project.optional-dependencies]
prometheus = ["prometheus-client"]

[project.entry-points."libtbx.dispatcher.script"]
"workflows.validate_recipe" = "workflows.validate_recipe"

[project.entry-points."libtbx.precommit"]
workflows = "workflows"

[project.entry-points."workflows.services"]
SampleConsumer = "workflows.services.sample_consumer:SampleConsumer"
SamplePipethrough = "workflows.services.sample_pipethrough:SamplePipethrough"
SampleProducer = "workflows.services.sample_producer:SampleProducer"
SampleTxn = "workflows.services.sample_transaction:SampleTxn"
SampleTxnProducer = "workflows.services.sample_transaction:SampleTxnProducer"

[project.entry-points."workflows.transport"]
PikaTransport = "workflows.transport.pika_transport:PikaTransport"
StompTransport = "workflows.transport.stomp_transport:StompTransport"
OfflineTransport = "workflows.transport.offline_transport:OfflineTransport"

[project.entry-points."zocalo.configuration.plugins"]
pika = "workflows.util.zocalo.configuration:Pika"
stomp = "workflows.util.zocalo.configuration:Stomp"
transport = "workflows.util.zocalo.configuration:DefaultTransport"

[project.scripts]
"workflows.validate_recipe" = "workflows.recipe.validate:main"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-ra"
required_plugins = "pytest-timeout"

[tool.bumpversion]
current_version = "3.0"
parse = '(?P<major>\d+)\.(?P<minor>\d+)'
serialize = ["{major}.{minor}"]
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "src/workflows/__init__.py"

[tool.ruff.lint]
select = ["E", "F", "W", "C4", "I"]
unfixable = ["F841"]
# E501 line too long (handled by formatter)
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["dxtbx_*", "dxtbx"]
required-imports = ["from __future__ import annotations"]

[tool.mypy]
mypy_path = "src/"
