[metadata]
name = workflows
version = 2.12
description = Data processing in distributed environments
long_description = file: README.rst
author = Diamond Light Source - Scientific Software et al.
author_email = scientificsoftware@diamond.ac.uk
license = BSD
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
project-urls =
    Download = https://github.com/DiamondLightSource/python-workflows/releases
    Documentation = https://github.com/DiamondLightSource/python-workflows
    GitHub = https://github.com/DiamondLightSource/python-workflows
    Bug-Tracker = https://github.com/DiamondLightSource/python-workflows/issues

[options]
install_requires =
    dataclasses;python_version<'3.7'
    pika
    setuptools
    stomp.py>=7
packages = find:
package_dir =
    =src
python_requires = >=3.6
zip_safe = False

[options.entry_points]
console_scripts =
    workflows.validate_recipe = workflows.recipe.validate:main
libtbx.dispatcher.script =
    workflows.validate_recipe = workflows.validate_recipe
libtbx.precommit =
    workflows = workflows
workflows.services =
    SampleConsumer = workflows.services.sample_consumer:SampleConsumer
    SampleProducer = workflows.services.sample_producer:SampleProducer
    SampleTxn = workflows.services.sample_transaction:SampleTxn
    SampleTxnProducer = workflows.services.sample_transaction:SampleTxnProducer
workflows.transport =
    PikaTransport = workflows.transport.pika_transport:PikaTransport
    StompTransport = workflows.transport.stomp_transport:StompTransport
zocalo.configuration.plugins =
    pika = workflows.util.zocalo.configuration:Pika
    stomp = workflows.util.zocalo.configuration:Stomp

[options.packages.find]
where = src

[flake8]
# Black disagrees with flake8 on a few points. Ignore those.
ignore = E203, E266, E501, W503
# E203 whitespace before ':'
# E266 too many leading '#' for block comment
# E501 line too long
# W503 line break before binary operator

max-line-length = 88

select =
    E401,E711,E712,E713,E714,E721,E722,E901,
    F401,F402,F403,F405,F541,F631,F632,F633,F811,F812,F821,F822,F841,F901,
    W191,W291,W292,W293,W602,W603,W604,W605,W606,
    # flake8-comprehensions, https://github.com/adamchainz/flake8-comprehensions
    C4,
