[metadata]
name = workflows
version = 2.27
description = Data processing in distributed environments
long_description = file: README.rst
author = Diamond Light Source - Scientific Software et al.
author_email = scientificsoftware@diamond.ac.uk
license = BSD
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Download = https://github.com/DiamondLightSource/python-workflows/releases
    Documentation = https://github.com/DiamondLightSource/python-workflows
    GitHub = https://github.com/DiamondLightSource/python-workflows
    Bug-Tracker = https://github.com/DiamondLightSource/python-workflows/issues

[options]
install_requires =
    bidict
    pika
    setuptools
    stomp-py>=7
packages = find:
package_dir =
    =src
python_requires = >=3.8
zip_safe = False
include_package_data = True

[options.extras_require]
prometheus = prometheus-client

[options.entry_points]
console_scripts =
    workflows.validate_recipe = workflows.recipe.validate:main
libtbx.dispatcher.script =
    workflows.validate_recipe = workflows.validate_recipe
libtbx.precommit =
    workflows = workflows
workflows.services =
    SampleConsumer = workflows.services.sample_consumer:SampleConsumer
    SampleProducer = workflows.services.sample_producer:SampleProducer
    SampleTxn = workflows.services.sample_transaction:SampleTxn
    SampleTxnProducer = workflows.services.sample_transaction:SampleTxnProducer
workflows.transport =
    PikaTransport = workflows.transport.pika_transport:PikaTransport
    StompTransport = workflows.transport.stomp_transport:StompTransport
    OfflineTransport = workflows.transport.offline_transport:OfflineTransport
zocalo.configuration.plugins =
    pika = workflows.util.zocalo.configuration:Pika
    stomp = workflows.util.zocalo.configuration:Stomp
    transport = workflows.util.zocalo.configuration:DefaultTransport

[options.packages.find]
where = src
